--- a/assignment/package.json
+++ b/assignment/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build": "parcel build index.html --dist-dir dist",
+    "build": "parcel build index.html --dist-dir ./dist --public-url",
     "start": "parcel serve index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
